@@ -38,6 +38,7 @@ Version 1.1.7 to be released
 - Enh #2133: Set default focus to the password input for Gii login page (Qiang)
 - Enh #2142: Added CWebUser::autoUpdateFlash (Qiang)
 - Enh #2143: Added htmlOptions to CTreeView::data so that additional options could be set for any tree view node (mdomba)
+- Enh #2172: Added CDbMigration::execute() (Qiang)
 - Enh: Added CGridView::ajaxUpdateError for the possibility to use a custom ajax error handler (mdomba)
 - Enh: Allowed using CController instead of Controller with webapp generated application (Sam Dark)
 - Enh: Added CController::createInlineAction, CInlineAction::inputParams and errorMessage to allow easier override (Qiang)
